Add username to the mapping file for the QKey entity

--- a/Resources/config/doctrine/QKey.orm.yml
+++ b/Resources/config/doctrine/QKey.orm.yml
@@ -10,6 +10,11 @@ Querdos\QFileEncryptionBundle\Entity\QKey:
                 strategy: AUTO
 
     fields:
+        username:
+            type:         string
+            length:       125
+            nullable:     false
+            unique:       true
         recipient:
             type:         string
             length:       125
