Fix service missing for QKeyManager

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,3 +3,4 @@ services:
         class:      Querdos\QFileEncryptionBundle\Util\AsymetricUtil
         calls:
             - [ setKernel,          [ '@kernel' ]]
+            - [ setQKeyManager,     [ '@qfe.manager.qkey']]
