--- a/Resources/config/validation.yml
+++ b/Resources/config/validation.yml
@@ -2,21 +2,14 @@ Querdos\QFileEncryptionBundle\Entity\QKey:
     properties:
         username:
             - NotBlank:
-                message: Username cannot be blank
-            - NotNull:
-                message: Username cannot be null
-
+                message: Username cannot be null or empty
         passphrase:
             - NotBlank:
-                message: Passphrase cannot be blank
-            - NotNull:
-                message: Passphrase cannot be null
+                message: Passphrase cannot be null or empty
 
         recipient:
             - NotBlank:
-                message: Email cannot be blank
-            - NotNull:
-                message: Email cannot be null
+                message: Email cannot be null or empty
             - Email:
                 message: Not a valid email
                 checkMX: true
