Add an association between a QFile and a QKey (MTO)

--- a/Resources/config/doctrine/QFile.orm.yml
+++ b/Resources/config/doctrine/QFile.orm.yml
@@ -25,4 +25,10 @@ Querdos\QFileEncryptionBundle\Entity\QFile:
             unique:       false
             nullable:     false
 
+    manyToOne:
+        qkey:
+            targetEntity: Querdos\QFileEncryptionBundle\Entity\QKey
+            joinColumn:
+                nullable: false
+
     lifecycleCallbacks: {}
