--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
   },
   "autoload": {
-    "psr-4": { "Querdos\\QPassDbBundle\\": "" }
+    "psr-4": { "Querdos\\QFileEncryptionBundle\\": "" }
   },
   "repositories": [
     {
